堆内存参数设置